[metadata]
name = steem-yo
version = 0.0.1
description = Notification service for steem
long_description = file: README.rst
keywords = steem, steemit, cryptocurrency, blockchain
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Development Status :: 4 - Beta

[options]
packages =
 yo
 jsonrpc_auth
scripts =
   bin/steemyo

[aliases]
test=pytest

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1


[pycodestyle]
# formerly pep8
ignore = E501


[pep8]
# backwards compat
ignore = E501


[style]
# google yapf config


[tool:pytest]
norecursedirs=dist docs build .tox deploy
addopts = 

[bdist_wheel]
universal=1


[coverage:run]
branch = True
source = yo

[coverage:xml]
output = coverage.xml
